# semantic_movie_search

./: .gitignore  README.md  main.py  pyproject.toml
cli/: semantic_search_cli.py
cli/lib/: search_utils.py  semantic_search.py
