[project]
name = "semantic-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<2",
  "sentence-transformers>=5.2.0",
  "torch>=1.11.0",
]

[tool.setuptools]
packages = ["cli"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
